[gd_scene load_steps=6 format=3 uid="uid://bijxdkq5d5x8f"]

[ext_resource type="Script" uid="uid://d3800yrntrfgb" path="res://studio/action_engine/graph/outputs/model_parameter.gd" id="1_s81k7"]
[ext_resource type="PackedScene" uid="uid://dqwhus4y0one8" path="res://ui/range_input/input.tscn" id="2_pybyp"]
[ext_resource type="Texture2D" uid="uid://d1kej52kqrg0g" path="res://ui/icons/eraser.svg" id="3_rnnsk"]

[sub_resource type="Curve" id="Curve_7ad3g"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_cikvy"]
_data = [Vector2(0.254851, 0), 0.0, 1.4, 0, 0, Vector2(0.963777, 1), 0.0, 0.0, 0, 0]
point_count = 2

[node name="ModelParameter" type="GraphNode"]
process_priority = 1
custom_minimum_size = Vector2(180, 0)
offset_left = -1.0
offset_top = 5.0
offset_right = 179.0
offset_bottom = 187.0
title = "Model Parameter"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = true
slot/1/left_type = 1
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 1
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
script = ExtResource("1_s81k7")
breathe_curve = SubResource("Curve_7ad3g")
blink_curve = SubResource("Curve_cikvy")

[node name="Parameters" type="OptionButton" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text_overrun_behavior = 3
fit_to_longest_item = false

[node name="Input" type="HBoxContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 48)
layout_mode = 2

[node name="Label" type="Label" parent="Input"]
layout_mode = 2
size_flags_horizontal = 3
text = "Value"

[node name="Value" type="SpinBox" parent="Input"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -999.0
max_value = 999.0
step = 0.01
editable = false

[node name="Range" parent="." instance=ExtResource("2_pybyp")]
unique_name_in_owner = true
layout_mode = 2

[node name="ResetButton" type="Button" parent="Range"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
focus_mode = 0
icon = ExtResource("3_rnnsk")
expand_icon = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ClampToggle" type="CheckButton" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Clamp"

[node name="InvertToggle" type="CheckButton" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Invert"

[connection signal="pressed" from="Range/ResetButton" to="." method="_on_reset_button_pressed"]
